# chatrs

./: Cargo.toml  Makefile.toml  README.md
cli_client/: Cargo.toml
cli_client/src/: main.rs
message_server/: Cargo.toml
message_server/src/: main.rs
src/: client.rs  lib.rs
web_client/: Cargo.toml  Makefile.toml
web_client/src/: lib.rs
web_client/static/: chatrs.css  index.html
web_server/: Cargo.toml
web_server/src/: main.rs
