[package]
name = "cli_client"
version = "0.1.0"
authors = ["Teemu Erkkola <teemu.erkkola@gofore.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
message-io = "0.12"
tui = { version = "0.14", features = ["termion"] }
termion = { version = "1.5" }
unicode-width = "0.1"

chatrs = { path = ".." }
anyhow = "1.0"
